# search-engine

./: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml
src/search_engine/analyzer/: analyzer.py  base.py  factory.py  normalizer.py  tokenizer.py
src/search_engine/analyzer/normalizers/: accent.py  base.py  lowercase.py  pipeline.py  unicode.py  whitespace.py
src/search_engine/models/: document.py  posting.py  search_result.py  term_statistics.py
src/tests/: test_document.py
src/tests/analyzer/: test_analyzer.py  test_normalizer.py  test_tokenizer.py
