[project]
name = "search-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lxml>=6.1.1",
    "nltk>=3.10.0",
    "orjson>=3.11.9",
    "pytest>=9.1.1",
]

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]

ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"


[tool.mypy]
python_version = "3.13"

strict = true

warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
check_untyped_defs = true

mypy_path = "src"
